- Stop monitoring on config change {pull-beats}[18284]
- Enable more granular control of monitoring {pull-beats}[18346]
- Fix jq: command not found {pull-beats}[18408]
- Avoid Chown on windows {pull-beats}[18512]
- Clean action store after enrolling to new configuration {pull-beats}[18656]
- Avoid watching monitor logs {pull-beats}[18723]
- Correctly report platform and family. {issue-beats}[18665]
- Guard against empty stream.datasource and namespace {pull-beats}[18769]
- Fix install service script for windows {pull-beats}[18814]

==== New features

- Generate index name in a format type-dataset-namespace {pull-beats}[16903]
- OS agnostic default configuration {pull-beats}[17016]
- Introduced post install hooks {pull-beats}[17241]
- Support for config constraints {pull-beats}[17112]
- Introduced `mage demo` command {pull-beats}[17312]
- Display the stability of the agent at enroll and start.  {pull-beats}[17336]
- Expose stream.* variables in events {pull-beats}[17468]
- Monitoring configuration reloadable {pull-beats}[17855]
- Pack ECS metadata to request payload send to fleet {pull-beats}[17894]
- Allow CLI overrides of paths {pull-beats}[17781]
- Enable Filebeat input: S3, Azureeventhub, cloudfoundry, httpjson, netflow, o365audit. {pull-beats}[17909]
- Configurable log level {pull-beats}[18083]
- Use data subfolder as default for process logs {pull-beats}[17960]
- Enable introspecting configuration {pull-beats}[18124]
- Follow home path for all config files {pull-beats}[18161]
- Do not require unnecessary configuration {pull-beats}[18003]
- Use nested objects so fleet can handle metadata correctly {pull-beats}[18234]
- Enable debug log level for Metricbeat and Filebeat when run under the Elastic Agent. {pull-beats}[17935]
- Pick up version from libbeat {pull-beats}[18350]
- More clear output of inspect command {pull-beats}[18405]
- When not port are specified and the https is used fallback to 443 {pull-beats}[18844]
- Basic upgrade process {pull-beats}[21002]